--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,10 @@
 {
-  "name": "Laradock",
-  "dockerComposeFile": "../docker-compose.yml",
-  "remoteUser": "laradock",
-  "runServices": [
-    "nginx",
-    "postgres",
-    "pgadmin"
-  ],
-  "service": "workspace",
-  "workspaceFolder": "/var/www",
-  "shutdownAction": "stopCompose",
-  "postCreateCommand": "uname -a"
+    "name": "laradock",
+    "image": "mcr.microsoft.com/devcontainers/base:ubuntu",  // Any generic, debian-based image.
+    "features": {
+        "ghcr.io/devcontainers/features/docker-in-docker:1": {
+            "version": "latest",
+            "moby": true
+        }
+    }
 }
